# seq-logic

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  template-README.md  tsconfig.json  vite-electron.config.ts  vite.config.ts
extraFiles/: 0.seq.json  示例文件.txt
extraFiles/samples/: gates.seq.json  初始化.seq.json  计数器.seq.json
src/: remote.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/units/: d-trigger.seq.json
src/assets/: base.css  main.css
src/electron/: handler.ts  isDevelopmentMode.ts  main.ts  mainRemote.ts  preload.ts  tsconfig.json
src/electron/bridge/: WholeModule.ts  declaration.ts  index.ts  tempateNameModule.ts
src/electron/handler/: handleWholeModule.ts  handler.ts
src/util/: animeFrame.ts  database.ts  promiseRef.ts  readable.ts  types.ts
src/util/SeqLogic/: index.ts  units.ts
src/view/: App.vue  Editor.vue
src/view/components/: LRMenu.vue
src/view/diagram-view/: Node.vue  TextView.vue  Wire.vue
src/view/editor-dialog/: EditNode.vue  EditText.vue  EditWire.vue  HelpDialog.vue  UnitsDialog.vue
src/vue/: index.html  main.ts  remote.ts  tsconfig.json
src/vue/assets/: main.css
src/vue/util/: animeFrame.ts  database.ts  promiseRef.ts  readable.ts  readableSize.ts  websiteName.ts
src/vue/util/SeqLogic/: index.ts  test.ts
src/vue/view/: App.vue  AsyncApp.vue  Editor.vue
src/vue/view/components/: Title.vue
src/vue/view/diagram-view/: Node.vue  TextView.vue  Wire.vue
src/vue/view/editor-dialog/: EditNode.vue  EditText.vue  EditWire.vue  (+1 more)
